--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
                     </li>
                     <li><a href="index.html" class="active">Home</a></li>
                     <li class="dropdown">
-                        <a href="products-actuators-gearboxes.html">Products</a>
-                        <ul class="dropdown-menu">
+                        <a href="products-actuators-gearboxes.html" aria-haspopup="true" aria-expanded="false">Products</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
                             <li><a href="products.html#pneumatic">Pneumatic Actuators</a></li>
                             <li><a href="products.html#gearboxes">Gearboxes</a></li>
                             <li><a href="products.html#electro-hydraulic">Electro-Hydraulic Actuators</a></li>
@@ -188,8 +188,8 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="industries-served.html">Industries</a>
-                        <ul class="dropdown-menu">
+                        <a href="industries-served.html" aria-haspopup="true" aria-expanded="false">Industries</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
                             <li><a href="industries.html#oil-gas">Oil & Gas</a></li>
                             <li><a href="industries.html#water-treatment">Water Treatment</a></li>
                             <li><a href="industries.html#power-generation">Power Generation</a></li>
@@ -199,8 +199,8 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="services-installation-maintenance.html">Services</a>
-                        <ul class="dropdown-menu">
+                        <a href="services-installation-maintenance.html" aria-haspopup="true" aria-expanded="false">Services</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
                             <li><a href="services.html#installation">Installation & Commissioning</a></li>
                             <li><a href="services.html#maintenance">Maintenance & Support</a></li>
                             <li><a href="services.html#training">Training Programs</a></li>
@@ -210,8 +210,8 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#">Global Presence</a>
-                        <ul class="dropdown-menu">
+                        <a href="#" aria-haspopup="true" aria-expanded="false">Global Presence</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
                             <li class="has-panel">
                                 <a href="global-presence/susin-itork-india.html">India</a>
                                 <div class="submenu-panel" role="region" aria-label="Susin I-Tork India quick info">
@@ -233,8 +233,8 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="about-industrial-actuators.html">About Us</a>
-                        <ul class="dropdown-menu">
+                        <a href="about-industrial-actuators.html" aria-haspopup="true" aria-expanded="false">About Us</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
                             <li><a href="about.html#story">Our Story</a></li>
                             <li><a href="about.html#mission">Mission & Values</a></li>
                             <li><a href="about.html#certifications">Certifications</a></li>
@@ -242,8 +242,8 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="careers.html">Careers</a>
-                        <ul class="dropdown-menu">
+                        <a href="careers.html" aria-haspopup="true" aria-expanded="false">Careers</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
                             <li><a href="careers.html#openings">Open Positions</a></li>
                             <li><a href="careers.html#life">Life at Susin</a></li>
                             <li><a href="careers.html#benefits">Benefits</a></li>
@@ -253,8 +253,8 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="resources-technical-docs.html">Resources</a>
-                        <ul class="dropdown-menu">
+                        <a href="resources-technical-docs.html" aria-haspopup="true" aria-expanded="false">Resources</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
                             <li><a href="resources.html#datasheets">Datasheets</a></li>
                             <li><a href="resources.html#manuals">Manuals</a></li>
                             <li><a href="resources.html#sizing-programs">Actuators Sizing Programs</a></li>
@@ -263,8 +263,8 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="contact-support-sales.html">Contact</a>
-                        <ul class="dropdown-menu">
+                        <a href="contact-support-sales.html" aria-haspopup="true" aria-expanded="false">Contact</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
                             <li><a href="contact.html#contact-form">Contact Form</a></li>
                             <li><a href="contact.html#sales">Sales Inquiry</a></li>
                             <li><a href="contact.html#support">Technical Support</a></li>
