--- a/careers.html
+++ b/careers.html
@@ -120,64 +120,127 @@
             <div class="nav-wrapper">
                 <a href="index.html" class="logo">
                     <img src="logo.jpg" alt="Company Logo" loading="lazy" decoding="async">
-                    <span class="logo-text">Industrial Solutions</span>
+                    <span class="logo-text">SUSIN</span>
                 </a>
                 <ul class="nav-menu" id="navMenu">
-                    <li class="lang-selector">
-                        <a href="#" class="lang-toggle">
-                            <i class="fas fa-globe"></i> EN <i class="fas fa-chevron-down"></i>
-                        </a>
-                        <ul class="lang-dropdown">
-                            <li><a href="#">English</a></li>
-                            <li><a href="#">中文</a></li>
-                            <li><a href="#">العربية</a></li>
-                            <li><a href="#">Deutsch</a></li>
-                            <li><a href="#">Français</a></li>
+                    <li class="lang-selector" role="menuitem">
+                        <button type="button" class="lang-toggle" aria-haspopup="menu" aria-expanded="false" id="langToggle">
+                            <i class="fas fa-globe"></i> EN
+                        </button>
+                        <ul class="lang-dropdown" role="menu" aria-labelledby="langToggle" id="langDropdown">
+                            <li role="none"><a href="#" role="menuitem" data-lang="en" class="active"><i class="fas fa-flag-usa"></i> English</a></li>
+                            <li role="none"><a href="#" role="menuitem" data-lang="zh"><i class="fas fa-flag"></i> 中文</a></li>
+                            <li role="none"><a href="#" role="menuitem" data-lang="ar"><i class="fas fa-flag"></i> العربية</a></li>
+                            <li role="none"><a href="#" role="menuitem" data-lang="de"><i class="fas fa-flag"></i> Deutsch</a></li>
+                            <li role="none"><a href="#" role="menuitem" data-lang="fr"><i class="fas fa-flag"></i> Français</a></li>
                         </ul>
                     </li>
                     <li><a href="index.html">Home</a></li>
                     <li class="dropdown">
-                        <a href="products-actuators-gearboxes.html">Products <i class="fas fa-chevron-down"></i></a>
+                        <a href="products-actuators-gearboxes.html" aria-haspopup="true" aria-expanded="false">Products</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
+                            <li><a href="products.html#pneumatic">Pneumatic Actuators</a></li>
+                            <li><a href="products.html#gearboxes">Gearboxes</a></li>
+                            <li><a href="products.html#electro-hydraulic">Electro-Hydraulic Actuators</a></li>
+                            <li><a href="products.html#electrical">Electrical Actuators</a></li>
+                        </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="industries-served.html">Industries <i class="fas fa-chevron-down"></i></a>
+                        <a href="industries-served.html" aria-haspopup="true" aria-expanded="false">Industries</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
+                            <li><a href="industries.html#oil-gas">Oil & Gas</a></li>
+                            <li><a href="industries.html#water-treatment">Water Treatment</a></li>
+                            <li><a href="industries.html#power-generation">Power Generation</a></li>
+                            <li><a href="industries.html#chemical">Chemical Processing</a></li>
+                            <li><a href="industries.html#marine">Marine & Offshore</a></li>
+                            <li><a href="industries.html#pharmaceutical">Pharmaceutical</a></li>
+                        </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="services-installation-maintenance.html">Services <i class="fas fa-chevron-down"></i></a>
+                        <a href="services-installation-maintenance.html" aria-haspopup="true" aria-expanded="false">Services</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
+                            <li><a href="services.html#installation">Installation & Commissioning</a></li>
+                            <li><a href="services.html#maintenance">Maintenance & Support</a></li>
+                            <li><a href="services.html#training">Training Programs</a></li>
+                            <li><a href="services.html#customization">Customization Services</a></li>
+                            <li><a href="services.html#spare-parts">Spare Parts & Components</a></li>
+                            <li><a href="services.html#technical-support">Technical Support</a></li>
+                        </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="about-industrial-actuators.html">About Us <i class="fas fa-chevron-down"></i></a>
-                    </li>
-                    <li class="dropdown active">
-                        <a href="careers.html">Careers <i class="fas fa-chevron-down"></i></a>
-                            <ul class="dropdown-menu">
-                                <li class="has-panel">
-                                    <a href="global-presence/susin-itork-india.html">India</a>
-                                    <div class="submenu-panel" role="region" aria-label="Susin I-Tork India quick info">
+                        <a href="#" aria-haspopup="true" aria-expanded="false">Global Presence</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
+                            <li class="has-panel">
+                                <a href="global-presence/susin-itork-india.html">India</a>
+                                <div class="submenu-panel" role="region" aria-label="Susin I-Tork India quick info">
                                     <img src="/assets/img/global-presence/thumb-placeholder.svg" alt="Susin I-Tork India" class="submenu-thumb">
                                     <h4>Susin I-Tork India</h4>
-                                        <p>Susin I-Tork India specialises in providing reliable flow-control and valve automation solutions. Established in 2007 as a JV with I-TORK Controls (South Korea), the facility now manufactures pneumatic actuators in India and serves power, cement, sugar, chemical and energy sectors.</p>
-                                        <ul class="submenu-contacts">
-                                            <li><strong>Phone:</strong> <a href="tel:+917708097242">+91 77080 97242</a></li>
-                                            <li><strong>Email:</strong> <a href="mailto:techsales@susinitork.in">techsales@susinitork.in</a></li>
-                                            <li><strong>Location:</strong> Coimbatore, India</li>
-                                        </ul>
-                                        <p class="submenu-actions"><a class="btn btn-sm" href="global-presence/susin-itork-india.html">View full profile</a> <a class="btn btn-link" href="contact.html#locations">Contact local office</a></p>
-                                    </div>
-                                </li>
-                                <li><a href="index.html#middle-east">Middle East</a></li>
-                                <li><a href="index.html#europe">Europe</a></li>
-                                <li><a href="index.html#far-east">Far East</a></li>
-                                <li><a href="index.html#recent-projects">Recent Projects</a></li>
-                            </ul>
+                                    <p>Susin I-Tork India specialises in providing reliable flow-control and valve automation solutions. Established in 2007 as a JV with I-TORK Controls (South Korea), the facility now manufactures pneumatic actuators in India and serves power, cement, sugar, chemical and energy sectors.</p>
+                                    <ul class="submenu-contacts">
+                                        <li><strong>Phone:</strong> <a href="tel:+917708097242">+91 77080 97242</a></li>
+                                        <li><strong>Email:</strong> <a href="mailto:techsales@susinitork.in">techsales@susinitork.in</a></li>
+                                        <li><strong>Location:</strong> Coimbatore, India</li>
+                                    </ul>
+                                    <p class="submenu-actions"><a class="btn btn-sm" href="global-presence/susin-itork-india.html">View full profile</a> <a class="btn btn-link" href="contact.html#locations">Contact local office</a></p>
+                                </div>
+                            </li>
+                            <li><a href="index.html#middle-east">Middle East</a></li>
+                            <li><a href="index.html#europe">Europe</a></li>
+                            <li><a href="index.html#far-east">Far East</a></li>
+                            <li><a href="index.html#recent-projects">Recent Projects</a></li>
+                        </ul>
                     </li>
-                    <li><a href="resources-technical-docs.html">Resources</a></li>
-                    <li><a href="contact-support-sales.html">Contact</a></li>
+                    <li class="dropdown">
+                        <a href="about-industrial-actuators.html" aria-haspopup="true" aria-expanded="false">About Us</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
+                            <li><a href="about.html#story">Our Story</a></li>
+                            <li><a href="about.html#mission">Mission & Values</a></li>
+                            <li><a href="about.html#certifications">Certifications</a></li>
+                            <li><a href="about.html#why-choose">Why Choose Us</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="careers.html" class="active" aria-haspopup="true" aria-expanded="false">Careers</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
+                            <li><a href="careers.html#openings">Open Positions</a></li>
+                            <li><a href="careers.html#life">Life at Susin</a></li>
+                            <li><a href="careers.html#benefits">Benefits</a></li>
+                            <li><a href="careers.html#internships">Internships</a></li>
+                            <li><a href="careers.html#apply">How to Apply</a></li>
+                            <li><a href="careers.html#contact-hr">Contact HR</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="resources-technical-docs.html" aria-haspopup="true" aria-expanded="false">Resources</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
+                            <li><a href="resources.html#datasheets">Datasheets</a></li>
+                            <li><a href="resources.html#manuals">Manuals</a></li>
+                            <li><a href="resources.html#sizing-programs">Actuators Sizing Programs</a></li>
+                            <li><a href="resources.html#faq">FAQs</a></li>
+                            <li><a href="resources.html#blog">Blog & News</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="contact-support-sales.html" aria-haspopup="true" aria-expanded="false">Contact</a>
+                        <ul class="dropdown-menu" role="menu" aria-hidden="true">
+                            <li><a href="contact.html#contact-form">Contact Form</a></li>
+                            <li><a href="contact.html#sales">Sales Inquiry</a></li>
+                            <li><a href="contact.html#support">Technical Support</a></li>
+                            <li><a href="contact.html#locations">Office Locations</a></li>
+                        </ul>
+                    </li>
                 </ul>
-                <div class="hamburger" id="hamburger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
+                <div class="nav-controls">
+                    <div class="notification-badge" id="notificationBadge" title="New updates available">
+                        <i class="fas fa-bell"></i>
+                        <span class="badge-count">3</span>
+                    </div>
+                    <button type="button" class="hamburger" id="hamburger" aria-label="Toggle navigation menu" aria-expanded="false">
+                        <span class="hamburger-line"></span>
+                        <span class="hamburger-line"></span>
+                        <span class="hamburger-line"></span>
+                        <span class="hamburger-text">Menu</span>
+                    </button>
                 </div>
             </div>
         </div>
@@ -397,5 +460,6 @@
         this.reset();
     });
     </script>
+    <script src="js/main.js" defer></script>
 </body>
 </html>
