service fix update

--- a/contact.html
+++ b/contact.html
@@ -84,12 +84,12 @@
             <div class="nav-wrapper">
                 <a href="index.html" class="logo">
                     <img src="logo.jpg" alt="Company Logo" loading="lazy">
-                    <span class="logo-text">Industrial Solutions</span>
+                    <span class="logo-text">SUSIN</span>
                 </a>
                 <ul class="nav-menu" id="navMenu">
                     <li class="lang-selector">
                         <a href="#" class="lang-toggle">
-                            <i class="fas fa-globe"></i> EN <i class="fas fa-chevron-down"></i>
+                            <i class="fas fa-globe"></i> EN
                         </a>
                         <ul class="lang-dropdown">
                             <li><a href="#">English</a></li>
@@ -100,18 +100,18 @@
                         </ul>
                     </li>
                     <li><a href="index.html">Home</a></li>
-                    <li class="dropdown">
-                        <a href="products.html">Products <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-menu">
+                    <li class="dropdown" role="menuitem" aria-haspopup="true">
+                        <a href="products.html">Products</a>
+                        <ul class="dropdown-menu" role="menu">
                             <li><a href="products.html#pneumatic">Pneumatic Actuators</a></li>
                             <li><a href="products.html#gearboxes">Gearboxes</a></li>
                             <li><a href="products.html#electro-hydraulic">Electro-Hydraulic Actuators</a></li>
                             <li><a href="products.html#electrical">Electrical Actuators</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown">
-                        <a href="industries.html">Industries <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-menu">
+                    <li class="dropdown" role="menuitem" aria-haspopup="true">
+                        <a href="industries.html">Industries</a>
+                        <ul class="dropdown-menu" role="menu">
                             <li><a href="industries.html#oil-gas">Oil & Gas</a></li>
                             <li><a href="industries.html#water-treatment">Water Treatment</a></li>
                             <li><a href="industries.html#power-generation">Power Generation</a></li>
@@ -120,9 +120,9 @@
                             <li><a href="industries.html#pharmaceutical">Pharmaceutical</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown">
-                        <a href="services.html">Services <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-menu">
+                    <li class="dropdown" role="menuitem" aria-haspopup="true">
+                        <a href="services.html">Services</a>
+                        <ul class="dropdown-menu" role="menu">
                             <li><a href="services.html#installation">Installation & Commissioning</a></li>
                             <li><a href="services.html#maintenance">Maintenance & Support</a></li>
                             <li><a href="services.html#training">Training Programs</a></li>
@@ -131,18 +131,18 @@
                             <li><a href="services.html#technical-support">Technical Support</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown">
-                        <a href="about.html">About Us <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-menu">
+                    <li class="dropdown" role="menuitem" aria-haspopup="true">
+                        <a href="about.html">About Us</a>
+                        <ul class="dropdown-menu" role="menu">
                             <li><a href="about.html#story">Our Story</a></li>
                             <li><a href="about.html#mission">Mission & Values</a></li>
                             <li><a href="about.html#certifications">Certifications</a></li>
                             <li><a href="about.html#why-choose">Why Choose Us</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown">
-                        <a href="careers.html">Careers <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-menu">
+                    <li class="dropdown" role="menuitem" aria-haspopup="true">
+                        <a href="careers.html">Careers</a>
+                        <ul class="dropdown-menu" role="menu">
                             <li><a href="careers.html#openings">Open Positions</a></li>
                             <li><a href="careers.html#life">Life at Susin</a></li>
                             <li><a href="careers.html#benefits">Benefits</a></li>
@@ -151,9 +151,9 @@
                             <li><a href="careers.html#contact-hr">Contact HR</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown">
-                        <a href="resources.html">Resources <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-menu">
+                    <li class="dropdown" role="menuitem" aria-haspopup="true">
+                        <a href="resources.html">Resources</a>
+                        <ul class="dropdown-menu" role="menu">
                             <li><a href="resources.html#datasheets">Datasheets</a></li>
                             <li><a href="resources.html#manuals">Manuals</a></li>
                             <li><a href="resources.html#sizing-programs">Actuators Sizing Programs</a></li>
@@ -161,9 +161,9 @@
                             <li><a href="resources.html#blog">Blog & News</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown">
-                        <a href="#">Global Presence <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-menu">
+                    <li class="dropdown" role="menuitem" aria-haspopup="true">
+                        <a href="#">Global Presence</a>
+                        <ul class="dropdown-menu" role="menu">
                             <li class="has-panel">
                                 <a href="global-presence/susin-itork-india.html">India</a>
                                 <div class="submenu-panel" role="region" aria-label="Susin I-Tork India quick info">
@@ -184,9 +184,9 @@
                             <li><a href="index.html#recent-projects">Recent Projects</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown">
-                        <a href="contact.html" class="active">Contact <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-menu">
+                    <li class="dropdown" role="menuitem" aria-haspopup="true">
+                        <a href="contact.html" class="active">Contact</a>
+                        <ul class="dropdown-menu" role="menu">
                             <li><a href="contact.html#contact-form">Contact Form</a></li>
                             <li><a href="contact.html#sales">Sales Inquiry</a></li>
                             <li><a href="contact.html#support">Technical Support</a></li>
