--- a/resources-technical-docs.html
+++ b/resources-technical-docs.html
@@ -68,12 +68,12 @@
             <div class="nav-wrapper">
                 <a href="index.html" class="logo">
                     <img src="logo.jpg" alt="Company Logo" loading="lazy" decoding="async">
-                    <span class="logo-text">Industrial Solutions</span>
+                    <span class="logo-text">SUSIN</span>
                 </a>
                 <ul class="nav-menu" id="navMenu">
                     <li class="lang-selector">
                         <a href="#" class="lang-toggle">
-                            <i class="fas fa-globe"></i> EN <i class="fas fa-chevron-down"></i>
+                            <i class="fas fa-globe"></i> EN
                         </a>
                         <ul class="lang-dropdown">
                             <li><a href="#">English</a></li>
@@ -84,18 +84,18 @@
                         </ul>
                     </li>
                     <li><a href="index.html">Home</a></li>
-                    <li class="dropdown">
-                        <a href="products-actuators-gearboxes.html">Products <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-menu">
+                    <li class="dropdown" role="menuitem" aria-haspopup="true">
+                        <a href="products-actuators-gearboxes.html">Products</a>
+                        <ul class="dropdown-menu" role="menu">
                             <li><a href="products-actuators-gearboxes.html#pneumatic">Pneumatic Actuators</a></li>
                             <li><a href="products-actuators-gearboxes.html#gearboxes">Gearboxes</a></li>
                             <li><a href="products-actuators-gearboxes.html#electro-hydraulic">Electro-Hydraulic Actuators</a></li>
                             <li><a href="products-actuators-gearboxes.html#electrical">Electrical Actuators</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown">
-                        <a href="industries-served.html">Industries <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-menu">
+                    <li class="dropdown" role="menuitem" aria-haspopup="true">
+                        <a href="industries-served.html">Industries</a>
+                        <ul class="dropdown-menu" role="menu">
                             <li><a href="industries-served.html#oil-gas">Oil & Gas</a></li>
                             <li><a href="industries-served.html#water-treatment">Water Treatment</a></li>
                             <li><a href="industries-served.html#power-generation">Power Generation</a></li>
@@ -104,9 +104,9 @@
                             <li><a href="industries-served.html#pharmaceutical">Pharmaceutical</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown">
-                        <a href="services-installation-maintenance.html">Services <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-menu">
+                    <li class="dropdown" role="menuitem" aria-haspopup="true">
+                        <a href="services-installation-maintenance.html">Services</a>
+                        <ul class="dropdown-menu" role="menu">
                             <li><a href="services-installation-maintenance.html#installation">Installation & Commissioning</a></li>
                             <li><a href="services-installation-maintenance.html#maintenance">Maintenance & Support</a></li>
                             <li><a href="services-installation-maintenance.html#training">Training Programs</a></li>
@@ -115,18 +115,18 @@
                             <li><a href="services-installation-maintenance.html#technical-support">Technical Support</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown">
-                        <a href="about-industrial-actuators.html">About Us <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-menu">
+                    <li class="dropdown" role="menuitem" aria-haspopup="true">
+                        <a href="about-industrial-actuators.html">About Us</a>
+                        <ul class="dropdown-menu" role="menu">
                             <li><a href="about-industrial-actuators.html#story">Our Story</a></li>
                             <li><a href="about-industrial-actuators.html#mission">Mission & Values</a></li>
                             <li><a href="about-industrial-actuators.html#certifications">Certifications</a></li>
                             <li><a href="about-industrial-actuators.html#why-choose">Why Choose Us</a></li>
                         </ul>
                     </li>
-                        <li class="dropdown">
-                            <a href="careers.html">Careers <i class="fas fa-chevron-down"></i></a>
-                            <ul class="dropdown-menu">
+                        <li class="dropdown" role="menuitem" aria-haspopup="true">
+                            <a href="careers.html">Careers</a>
+                            <ul class="dropdown-menu" role="menu">
                                 <li><a href="careers.html#openings">Open Positions</a></li>
                                 <li><a href="careers.html#life">Life at Susin</a></li>
                                 <li><a href="careers.html#benefits">Benefits</a></li>
@@ -135,9 +135,9 @@
                                 <li><a href="careers.html#contact-hr">Contact HR</a></li>
                             </ul>
                         </li>
-                    <li class="dropdown">
-                        <a href="#" class="has-sub">Global Presence <i class="fas fa-chevron-down"></i></a>
-                            <ul class="dropdown-menu">
+                    <li class="dropdown" role="menuitem" aria-haspopup="true">
+                        <a href="#" class="has-sub">Global Presence</a>
+                            <ul class="dropdown-menu" role="menu">
                                 <li class="has-panel">
                                     <a href="global-presence/susin-itork-india.html">India</a>
                                     <div class="submenu-panel" role="region" aria-label="Susin I-Tork India quick info">
@@ -158,9 +158,9 @@
                                 <li><a href="index.html#recent-projects">Recent Projects</a></li>
                             </ul>
                     </li>
-                    <li class="dropdown">
-                        <a href="resources-technical-docs.html" class="active">Resources <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-menu">
+                    <li class="dropdown" role="menuitem" aria-haspopup="true">
+                        <a href="resources-technical-docs.html" class="active">Resources</a>
+                        <ul class="dropdown-menu" role="menu">
                             <li><a href="resources-technical-docs.html#datasheets">Datasheets</a></li>
                             <li><a href="resources-technical-docs.html#manuals">Manuals</a></li>
                             <li><a href="resources-technical-docs.html#sizing-programs">Actuators Sizing Programs</a></li>
@@ -168,9 +168,9 @@
                             <li><a href="resources-technical-docs.html#blog">Blog & News</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown">
-                        <a href="contact-support-sales.html">Contact <i class="fas fa-chevron-down"></i></a>
-                        <ul class="dropdown-menu">
+                    <li class="dropdown" role="menuitem" aria-haspopup="true">
+                        <a href="contact-support-sales.html">Contact</a>
+                        <ul class="dropdown-menu" role="menu">
                             <li><a href="contact-support-sales.html#contact-form">Contact Form</a></li>
                             <li><a href="contact-support-sales.html#sales">Sales Inquiry</a></li>
                             <li><a href="contact-support-sales.html#support">Technical Support</a></li>
