--- a/about.html
+++ b/about.html
@@ -227,13 +227,14 @@
         <div class="container">
             <div class="about-section">
                 <h2 id="story-heading">Our Story</h2>
-                <p>A true first-generation entrepreneur, Muthukumar Sunderrajan laid the foundation of this empire in 1992 with "SUMKA SONS", starting as a small trading company with no prior industry experience or family business background. Through dedication, innovation, and commitment to excellence, we have grown into a leading manufacturer of industrial actuators and gearboxes.</p>
-                <p>Today, we serve customers worldwide across diverse industries, providing reliable motion control solutions for critical applications. Our journey from a small trading company to an established industrial manufacturer reflects our commitment to quality, innovation, and customer satisfaction.</p>
+                <p>A true first-generation entrepreneur, Muthukumar Sunderrajan laid the foundation of SUSIN in 1992 with "SUMKA SONS", starting as a small trading company with no prior industry experience or family business background. Through dedication, innovation, and commitment to excellence, we have grown into a leading provider of valve automation solutions with over 32 years of trusted experience.</p>
+                <p>Recognizing the need for high-quality valve and damper automation products, SUSIN has established itself as a reliable partner in the Asian market. We have proudly provided steadfast support to the power industry for over 15 years, earning approvals from esteemed organizations such as BHEL, NTPC, and Kahramaa in Qatar. Currently supporting 100+ power industries across Asia, we continue to deliver reliable solutions for operational success.</p>
+                <p>In the oil & gas sector, our exceptional track record is highlighted by approvals from major refineries. With over 100 actuators in successful operation within FPSO (Floating Production Storage and Offloading) projects, we have solidified our expertise and trustworthiness in critical industry applications across upstream, midstream, and downstream operations.</p>
             </div>
 
             <div class="about-section">
                 <h2 id="mission-heading">Our Mission</h2>
-                <p>To provide world-class motion control solutions that enhance operational efficiency, reliability, and safety for our customers across all industries. We strive to be the preferred partner for industrial automation and control systems.</p>
+                <p>To provide world-class valve automation and actuator solutions that enhance operational efficiency, reliability, and safety for power industries, oil & gas facilities, and process control applications across Asia and beyond. We strive to be the preferred partner for industrial automation systems through continuous innovation and unwavering commitment to quality.</p>
             </div>
 
             <div class="about-section">
