--- a/contact.html
+++ b/contact.html
@@ -275,8 +275,8 @@
                         <div class="office-locations">
                                 <div class="office-item">
                                     <picture>
-                                        <source srcset="assets/img/contact/mumbai.webp" type="image/webp">
-                                        <img src="assets/img/contact/mumbai.jpg" alt="Mumbai office" class="office-image" loading="lazy" decoding="async">
+                                        <source srcset="https://images.unsplash.com/photo-1570168007204-dfb528c6958f?w=800&q=80" type="image/webp">
+                                        <img src="https://images.unsplash.com/photo-1570168007204-dfb528c6958f?w=800&q=80" alt="Mumbai office" class="office-image" loading="lazy" decoding="async">
                                     </picture>
                                     <h4>Mumbai Office</h4>
                                     <p><strong>Address:</strong> Regus Business Centre, Level-1, Tiffany Building, Hiranandani Estate, Thane West– 400607, Maharashtra, India</p>
@@ -285,8 +285,8 @@
                                 </div>
                                 <div class="office-item">
                                     <picture>
-                                        <source srcset="assets/img/contact/uae.webp" type="image/webp">
-                                        <img src="assets/img/contact/uae.png" alt="UAE office" class="office-image" loading="lazy" decoding="async">
+                                        <source srcset="https://images.unsplash.com/photo-1512453979798-5ea266f8880c?w=800&q=80" type="image/webp">
+                                        <img src="https://images.unsplash.com/photo-1512453979798-5ea266f8880c?w=800&q=80" alt="UAE office" class="office-image" loading="lazy" decoding="async">
                                     </picture>
                                     <h4>UAE Office</h4>
                                     <p><strong>Address:</strong> SUSIN I-TORK ME FZC Y-61, SAIF SUIT, SAIF ZONE SHARJAH, UAE PO Box No: 122643</p>
@@ -295,8 +295,8 @@
                                 </div>
                                 <div class="office-item">
                                     <picture>
-                                        <source srcset="assets/img/contact/qatar.webp" type="image/webp">
-                                        <img src="assets/img/contact/qatar.jpg" alt="Qatar office" class="office-image" loading="lazy" decoding="async">
+                                        <source srcset="https://images.unsplash.com/photo-1583422409516-2895a77efded?w=800&q=80" type="image/webp">
+                                        <img src="https://images.unsplash.com/photo-1583422409516-2895a77efded?w=800&q=80" alt="Qatar office" class="office-image" loading="lazy" decoding="async">
                                     </picture>
                                     <h4>Qatar Office</h4>
                                     <p><strong>Address:</strong> Building No.6, 2nd Floor, Office 46 Barwa Commercial Avenue, Abu Hamour P.O. Box - 220, Doha - Qatar</p>
@@ -305,8 +305,8 @@
                                 </div>
                                 <div class="office-item">
                                     <picture>
-                                        <source srcset="assets/img/contact/oman.webp" type="image/webp">
-                                        <img src="assets/img/contact/oman.png" alt="Oman office" class="office-image" loading="lazy" decoding="async">
+                                        <source srcset="https://images.unsplash.com/photo-1590759668628-05b2fc5ace7d?w=800&q=80" type="image/webp">
+                                        <img src="https://images.unsplash.com/photo-1590759668628-05b2fc5ace7d?w=800&q=80" alt="Oman office" class="office-image" loading="lazy" decoding="async">
                                     </picture>
                                     <h4>Oman Office</h4>
                                     <p><strong>Address:</strong> Gulf Energy Building, Building No: 1/21, Road No: 5001, Near Al Nadha Tower, Ghala North, Muscat, Sultanate of Oman</p>
@@ -315,8 +315,8 @@
                                 </div>
                                 <div class="office-item">
                                     <picture>
-                                        <source srcset="assets/img/contact/europe.webp" type="image/webp">
-                                        <img src="assets/img/contact/europe.jpg" alt="Europe office" class="office-image" loading="lazy" decoding="async">
+                                        <source srcset="https://images.unsplash.com/photo-1499856871958-5b9627545d1a?w=800&q=80" type="image/webp">
+                                        <img src="https://images.unsplash.com/photo-1499856871958-5b9627545d1a?w=800&q=80" alt="Europe office" class="office-image" loading="lazy" decoding="async">
                                     </picture>
                                     <h4>Europe Office (KTC Controls)</h4>
                                     <p><strong>Address:</strong> KTC CONTROLS Krähenweg 11, 2459 Hamburg, Germany</p>
