--- a/index.html
+++ b/index.html
@@ -291,9 +291,9 @@
             <div class="container">
                 <div class="hero-grid">
                     <div class="hero-panel">
-                        <p class="eyebrow">Industrial Motion Control • Since 2007</p>
-                        <h1>Precision Actuators. Robust Gearboxes. Trusted Performance.</h1>
-                        <p class="lead">Designing and manufacturing industrial actuators and gearboxes for demanding environments — with global support, local service and engineering-led solutions.</p>
+                        <p class="eyebrow">Valve Automation Solutions • Trusted for 32+ Years</p>
+                        <h1>Leading Provider of Industrial Actuators & Valve Automation</h1>
+                        <p class="lead">SUSIN has proudly provided steadfast support to the Asian power and oil & gas industries for over 32 years, earning approvals from esteemed organizations such as BHEL, NTPC, and major refineries. With over 100 actuators in successful operation within FPSO projects, we deliver reliable valve automation solutions across upstream, midstream, and downstream sectors.</p>
 
                         <div class="hero-cta">
                             <a href="products.html" class="btn btn-primary btn-large">Explore Products</a>
@@ -301,15 +301,15 @@
                         </div>
 
                         <ul class="hero-stats" aria-hidden="true">
-                            <li><strong>1000+</strong><span>Installed Systems</span></li>
-                            <li><strong>45</strong><span>Countries Served</span></li>
-                            <li><strong>24/7</strong><span>Service & Support</span></li>
+                            <li><strong>100+</strong><span>Power Industries Supported</span></li>
+                            <li><strong>32+</strong><span>Years of Experience</span></li>
+                            <li><strong>100+</strong><span>FPSO Actuators Operating</span></li>
                         </ul>
                     </div>
                     <div class="hero-media" aria-hidden="true">
                         <picture>
-                            <source srcset="assets/img/hero-large.webp" type="image/webp">
-                            <img src="assets/img/hero-large.jpg" alt="Actuators and gearboxes in industrial setting" loading="lazy" class="hero-image">
+                            <source srcset="https://images.unsplash.com/photo-1581094794329-c8112a89af12?w=1200&q=80" type="image/webp">
+                            <img src="https://images.unsplash.com/photo-1581094794329-c8112a89af12?w=1200&q=80" alt="Actuators and gearboxes in industrial setting" loading="lazy" class="hero-image">
                         </picture>
                     </div>
                 </div>
@@ -342,7 +342,7 @@
             <div class="products-grid">
                 <div class="product-card">
                     <div class="product-icon">
-                        <img src="https://www.susingroup.com/assets/img/products/pneumatic/pds-actuator.jpg" alt="PDS Pneumatic Actuator" class="product-card-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
+                        <img src="https://images.unsplash.com/photo-1567789884554-0b844b597180?w=800&q=80" alt="PDS Pneumatic Actuator" class="product-card-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw" fetchpriority="low">
                     </div>
                     <h3>Pneumatic Scotch Yoke Rotary Actuators</h3>
                     <p><strong>Series:</strong> PDS Actuator, HD Actuator</p>
@@ -354,7 +354,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-icon">
-                        <img src="https://www.susingroup.com/assets/img/products/mechanical/itg-series.jpg" alt="ITG Series Gearbox" class="product-card-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw">
+                        <img src="https://images.unsplash.com/photo-1587293852726-70cdb56c2866?w=800&q=80" alt="ITG Series Gearbox" class="product-card-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw">
                     </div>
                     <h3>Gearboxes</h3>
                     <p><strong>Series:</strong> ITG Series Mechanical Worm Gear Actuators</p>
@@ -366,7 +366,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-icon">
-                        <img src="https://www.susingroup.com/assets/img/products/hydraulic/electro-hydraulic-actuator.jpg" alt="Electro-Hydraulic Actuator" class="product-card-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw">
+                        <img src="https://images.unsplash.com/photo-1581092918484-8313e1f7f53d?w=800&q=80" alt="Electro-Hydraulic Actuator" class="product-card-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw">
                     </div>
                     <h3>Electro-Hydraulic Actuators</h3>
                     <p>Advanced electro-hydraulic actuators combining electrical control with hydraulic power for high-force applications and precise positioning.</p>
@@ -377,7 +377,7 @@
                 </div>
                 <div class="product-card">
                     <div class="product-icon">
-                        <img src="https://www.susingroup.com/assets/img/products/electrical/itq-series.jpg" alt="ITQ Electrical Actuator" class="product-card-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw">
+                        <img src="https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=800&q=80" alt="ITQ Electrical Actuator" class="product-card-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 33vw">
                     </div>
                     <h3>Electrical Actuators</h3>
                     <p><strong>Series:</strong> ITQ Series (Rotary)</p>
