--- a/industries.html
+++ b/industries.html
@@ -219,7 +219,7 @@
             <div class="industry-card">
                 <div class="industry-icon"><i class="fas fa-industry"></i></div>
                 <h2>Oil & Gas</h2>
-                <p>Critical valve automation solutions for upstream exploration, midstream transportation, and downstream refining operations. Our actuators are designed to withstand extreme temperatures, high pressures, and corrosive environments typical in oil and gas applications.</p>
+                <p>SUSIN is a leading provider of Valve Automation Applications across the upstream, midstream, and downstream sectors in the Asian market. Our exceptional track record is highlighted by approvals from major refineries, showcasing our commitment to quality and reliability. We have over 100 actuators in successful operation within FPSO projects, solidifying our expertise and trustworthiness in critical oil & gas industry applications.</p>
                 <h3>Key Applications:</h3>
                 <ul>
                     <li>Pipeline valve control</li>
@@ -247,7 +247,7 @@
             <div class="industry-card">
                 <div class="industry-icon"><i class="fas fa-plug"></i></div>
                 <h2>Power Generation</h2>
-                <p>High-performance solutions for thermal, nuclear, and renewable energy facilities. Our actuators provide reliable operation in power plants where downtime is not an option.</p>
+                <p>SUSIN has proudly provided steadfast support to the power industry for over 15 years, earning approvals from esteemed organizations such as BHEL, NTPC, and Kahramaa in Qatar. Currently supporting 100+ power industries across Asia, we deliver reliable valve automation solutions for thermal, nuclear, and renewable energy facilities where operational excellence is critical.</p>
                 <h3>Key Applications:</h3>
                 <ul>
                     <li>Steam turbine control</li>
