--- a/products.html
+++ b/products.html
@@ -218,8 +218,8 @@
         <div class="container">
             <div class="product-detail">
                 <div class="product-image">
-                    <img src="https://www.susingroup.com/assets/img/products/pneumatic/pds-actuator.jpg" alt="PDS Pneumatic Scotch Yoke Rotary Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw" fetchpriority="low">
-                    <img src="https://www.susingroup.com/assets/img/products/pneumatic/hd-actuator.jpg" alt="HD Pneumatic Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw">
+                    <img src="https://images.unsplash.com/photo-1567789884554-0b844b597180?w=800&q=80" alt="PDS Pneumatic Scotch Yoke Rotary Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw" fetchpriority="low">
+                    <img src="https://images.unsplash.com/photo-1581092918484-8313e1f7f53d?w=800&q=80" alt="HD Pneumatic Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw">
                 </div>
                 <div class="product-content">
                     <h2>Pneumatic Scotch Yoke Rotary Actuators</h2>
@@ -282,7 +282,7 @@
         <div class="container">
             <div class="product-detail reverse">
                 <div class="product-image">
-                    <img src="https://www.susingroup.com/assets/img/products/mechanical/itg-series.jpg" alt="ITG Series Mechanical Worm Gear Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw">
+                    <img src="https://images.unsplash.com/photo-1587293852726-70cdb56c2866?w=800&q=80" alt="ITG Series Mechanical Worm Gear Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw">
                 </div>
                 <div class="product-content">
                     <h2>Gearboxes</h2>
@@ -345,7 +345,7 @@
         <div class="container">
             <div class="product-detail">
                 <div class="product-image">
-                    <img src="https://www.susingroup.com/assets/img/products/hydraulic/electro-hydraulic-actuator.jpg" alt="Electro-Hydraulic Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw">
+                    <img src="https://images.unsplash.com/photo-1581092918484-8313e1f7f53d?w=800&q=80" alt="Electro-Hydraulic Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw">
                 </div>
                 <div class="product-content">
                     <h2>Electro-Hydraulic Actuators</h2>
@@ -407,7 +407,7 @@
         <div class="container">
             <div class="product-detail reverse">
                 <div class="product-image">
-                    <img src="https://www.susingroup.com/assets/img/products/electrical/itq-series.jpg" alt="ITQ Series Electrical Rotary Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw">
+                    <img src="https://images.unsplash.com/photo-1581092160562-40aa08e78837?w=800&q=80" alt="ITQ Series Electrical Rotary Actuator" class="product-img" loading="lazy" decoding="async" sizes="(max-width:600px) 100vw, 50vw">
                 </div>
                 <div class="product-content">
                     <h2>Electrical Actuators</h2>
